Lookups first stage

--- a/Client/src/app/content/pages/lookups/call-center-source/call-center-source.component.html
+++ b/Client/src/app/content/pages/lookups/call-center-source/call-center-source.component.html
@@ -1,3 +1,18 @@
-<p>
-  call-center-source works!
-</p>
+<div>
+    <mat-table [dataSource]="dataSource" matSort>
+      <ng-container matColumnDef="id">
+        <mat-header-cell *matHeaderCellDef>ID</mat-header-cell>
+        <mat-cell *matCellDef="let ccSource">{{ccSource.id}}</mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="name">
+        <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
+        <mat-cell *matCellDef="let ccSource">{{ccSource.name}}</mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="nameEn">
+        <mat-header-cell *matHeaderCellDef>Name En</mat-header-cell>
+        <mat-cell *matCellDef="let ccSource">{{ccSource.nameEn}}</mat-cell>
+      </ng-container>
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+    </mat-table>
+  </div>
