--- a/Client/src/app/content/pages/lookups/employee/employee.component.html
+++ b/Client/src/app/content/pages/lookups/employee/employee.component.html
@@ -1,3 +1,22 @@
-<p>
-  employee works!
-</p>
+<div>
+  <mat-table [dataSource]="dataSource" matSort>
+    <ng-container matColumnDef="id">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>ID</mat-header-cell>
+      <mat-cell *matCellDef="let employee">{{employee.id}}</mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="name">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
+      <mat-cell *matCellDef="let employee">{{employee.name}}</mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="nameEn">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Name En</mat-header-cell>
+      <mat-cell *matCellDef="let employee">{{employee.nameEn}}</mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="jobId">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Job</mat-header-cell>
+      <mat-cell *matCellDef="let employee">{{employee.jobId}}</mat-cell>
+    </ng-container>
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+  </mat-table>
+</div>
