--- a/Client/src/app/content/pages/lookups/product-cat1/product-cat1.component.html
+++ b/Client/src/app/content/pages/lookups/product-cat1/product-cat1.component.html
@@ -1,3 +1,18 @@
-<p>
-  product-cat1 works!
-</p>
+<div>
+    <mat-table [dataSource]="dataSource" matSort>
+      <ng-container matColumnDef="id">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>ID</mat-header-cell>
+        <mat-cell *matCellDef="let pcat1">{{pcat1.id}}</mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="name">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
+        <mat-cell *matCellDef="let pcat1">{{pcat1.name}}</mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="nameEn">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Name En</mat-header-cell>
+        <mat-cell *matCellDef="let pcat1">{{pcat1.nameEn}}</mat-cell>
+      </ng-container>
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+    </mat-table>
+  </div>
