--- a/Client/src/app/content/pages/lookups/unit/unit.component.html
+++ b/Client/src/app/content/pages/lookups/unit/unit.component.html
@@ -1,16 +1,40 @@
 <div>
-	<mat-table [dataSource]="dataSource">
+	<ng-container mPortletHeadTitle>
+		<div class="m-portlet__head-title">
+			<h3 class="m-portlet__head-text">
+				Unit list
+			</h3>
+		</div>
+	</ng-container>
+	<ng-container mPortletHeadTools>
+		<a [routerLink]="['/lookups/unit/add']" mat-raised-button color="primary" matTooltip="Create new unit">New
+			product</a>
+	</ng-container>
+	<mat-table [dataSource]="dataSource" matSort>
 		<ng-container matColumnDef="id">
-			<mat-header-cell *matHeaderCellDef>ID</mat-header-cell>
+			<mat-header-cell *matHeaderCellDef mat-sort-header>ID</mat-header-cell>
 			<mat-cell *matCellDef="let unit">{{unit.id}}</mat-cell>
 		</ng-container>
 		<ng-container matColumnDef="name">
-			<mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
+			<mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
 			<mat-cell *matCellDef="let unit">{{unit.name}}</mat-cell>
 		</ng-container>
 		<ng-container matColumnDef="nameEn">
-			<mat-header-cell *matHeaderCellDef>Name En</mat-header-cell>
+			<mat-header-cell *matHeaderCellDef mat-sort-header>Name En</mat-header-cell>
 			<mat-cell *matCellDef="let unit">{{unit.nameEn}}</mat-cell>
+		</ng-container>
+		<ng-container matColumnDef="actions">
+			<mat-header-cell *matHeaderCellDef>
+				Actions
+			</mat-header-cell>
+			<mat-cell *matCellDef="let unit">
+				<a [routerLink]="['/lookups/unit/edit']" [queryParams]="{id: unit.id}" mat-icon-button color="primary" matTooltip="Edit unit">
+					<mat-icon>create</mat-icon>
+				</a>&nbsp;
+				<button mat-icon-button color="warn" type="button" (click)="deleteUnit(unit)" matTooltip="Delete unit">
+					<mat-icon>delete</mat-icon>
+				</button>&nbsp;
+			</mat-cell>
 		</ng-container>
 		<mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
 		<mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
