--- a/Client/src/app/content/pages/lookups/branch/branch.component.html
+++ b/Client/src/app/content/pages/lookups/branch/branch.component.html
@@ -1,18 +1,43 @@
 <div>
-    <mat-table [dataSource]="dataSource" matSort>
-      <ng-container matColumnDef="id">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>ID</mat-header-cell>
-        <mat-cell *matCellDef="let branch">{{branch.id}}</mat-cell>
-      </ng-container>
-      <ng-container matColumnDef="name">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
-        <mat-cell *matCellDef="let branch">{{branch.name}}</mat-cell>
-      </ng-container>
-      <ng-container matColumnDef="nameEn">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>Name En</mat-header-cell>
-        <mat-cell *matCellDef="let branch">{{branch.nameEn}}</mat-cell>
-      </ng-container>
-      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
-    </mat-table>
-  </div>
+  <ng-container mPortletHeadTitle>
+    <div class="m-portlet__head-title">
+      <h3 class="m-portlet__head-text">
+        Branch list
+      </h3>
+    </div>
+  </ng-container>
+  <ng-container mPortletHeadTools>
+    <a [routerLink]="['/lookups/branch/add']" mat-raised-button color="primary" matTooltip="Create new branch">New
+      product</a>
+  </ng-container>
+  <mat-table [dataSource]="dataSource" matSort>
+    <ng-container matColumnDef="id">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>ID</mat-header-cell>
+      <mat-cell *matCellDef="let branch">{{branch.id}}</mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="name">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
+      <mat-cell *matCellDef="let branch">{{branch.name}}</mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="nameEn">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Name En</mat-header-cell>
+      <mat-cell *matCellDef="let branch">{{branch.nameEn}}</mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="actions">
+      <mat-header-cell *matHeaderCellDef>
+        Actions
+      </mat-header-cell>
+      <mat-cell *matCellDef="let branch">
+        <a [routerLink]="['/lookups/branch/edit']" [queryParams]="{id: branch.id}" mat-icon-button color="primary"
+          matTooltip="Edit branch">
+          <mat-icon>create</mat-icon>
+        </a>&nbsp;
+        <button mat-icon-button color="warn" type="button" (click)="deleteBranch(branch)" matTooltip="Delete branch">
+          <mat-icon>delete</mat-icon>
+        </button>&nbsp;
+      </mat-cell>
+    </ng-container>
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+  </mat-table>
+</div>
