--- a/Client/src/app/content/pages/lookups/unit/unit-edit/unit-edit.component.html
+++ b/Client/src/app/content/pages/lookups/unit/unit-edit/unit-edit.component.html
@@ -23,57 +23,68 @@
     </div>
   </ng-container>
   <ng-container mPortletBody>
-      <mat-tab-group [(selectedIndex)]="selectedTab" *ngIf="unit">
-        <mat-tab label="Basic info">
-          <ng-template matTabContent>
-            <!--begin::Form-->
-            <form [formGroup]="unitForm" class="m-form m-form--group-seperator-dashed">
-  
-                <m-alert *ngIf="hasFormErrors" type="warn" [showCloseButton]="true" [duration]="10000" (close)="onAlertClose($event)">
-                  Oh snap! Change a few things up and try submitting again.
-                </m-alert>
-    
-                <div class="m-form__section m-form__section--first">
-                  <div class="m-form__group">
-                    <div class="row">
-    
-                      <div class="col-md-6 m--margin-bottom-10-mobile">
-                        <mat-form-field class="mat-form-field-fluid">
-                          <input matInput placeholder="Enter Name" formControlName="name">
-                          <mat-error>
-                            Name is
-                            <strong>required</strong>
-                          </mat-error>
-                          <mat-hint align="start">Please enter
-                            <strong>Name</strong>
-                          </mat-hint>
-                        </mat-form-field>
-                      </div>
-                      <div class="col-md-6 m--margin-bottom-10-mobile">
-                        <mat-form-field class="mat-form-field-fluid">
-                          <input matInput placeholder="Enter english Name" formControlName="nameEn">
-                          <mat-error>
-                            English Name is
-                            <strong>required</strong>
-                          </mat-error>
-                          <mat-hint align="start">Please enter
-                            <strong>English name</strong>
-                          </mat-hint>
-                        </mat-form-field>
-                      </div>
-                      
-                    </div>
+    <mat-tab-group [(selectedIndex)]="selectedTab" *ngIf="unit">
+      <mat-tab label="Basic info">
+        <ng-template matTabContent>
+          <!--begin::Form-->
+          <form [formGroup]="unitForm" class="m-form m-form--group-seperator-dashed">
+
+            <m-alert *ngIf="hasFormErrors" type="warn" [showCloseButton]="true" [duration]="10000" (close)="onAlertClose($event)">
+              Oh snap! Change a few things up and try submitting again.
+            </m-alert>
+
+            <div class="m-form__section m-form__section--first">
+              <div class="m-form__group">
+                <div class="row">
+
+                  <div class="col-md-4 m--margin-bottom-10-mobile">
+                    <mat-form-field class="mat-form-field-fluid">
+                      <input matInput placeholder="ID" formControlName="id" >
+                      <mat-error>
+                        ID
+                      </mat-error>
+                      <mat-hint align="start">Please enter
+                        <strong>ID</strong>
+                      </mat-hint>
+                    </mat-form-field>
                   </div>
-                  
+                  <div class="col-md-4 m--margin-bottom-10-mobile">
+                      <mat-form-field class="mat-form-field-fluid">
+                        <input matInput placeholder="Enter Name" formControlName="name">
+                        <mat-error>
+                          Name is
+                          <strong>required</strong>
+                        </mat-error>
+                        <mat-hint align="start">Please enter
+                          <strong>Name</strong>
+                        </mat-hint>
+                      </mat-form-field>
+                    </div>
+                  <div class="col-md-4 m--margin-bottom-10-mobile">
+                    <mat-form-field class="mat-form-field-fluid">
+                      <input matInput placeholder="Enter english Name" formControlName="nameEn">
+                      <mat-error>
+                        English Name is
+                        <strong>required</strong>
+                      </mat-error>
+                      <mat-hint align="start">Please enter
+                        <strong>English name</strong>
+                      </mat-hint>
+                    </mat-form-field>
+                  </div>
+
                 </div>
-              </form>
-            <!--end::Form-->
-          </ng-template>
-        </mat-tab>
-        
-        
-      </mat-tab-group>
-    </ng-container>
+              </div>
+
+            </div>
+          </form>
+          <!--end::Form-->
+        </ng-template>
+      </mat-tab>
+
+
+    </mat-tab-group>
+  </ng-container>
 
 
 </m-portlet>
